--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="container">
         <div class="left-panel">
             <ul>
-                <li class="item" data-page="suhyouri-pi.github.io/test/ls/page1.html">페이지 1</li>
+                <li class="item" data-page="./ls/page1.html">페이지 1</li>
                 <li class="item" data-page="./ls/page2.html">페이지 2</li>
-                <li class="item" data-page="./page3.html">페이지 3</li>
+                <li class="item" data-page="./ls/page3.html">페이지 3</li>
             </ul>
         </div>
         <div class="right-panel">
